# hole-lang

./: Cargo.toml  README.md  language-spec.md
calculator/: AGENTS.md
examples/: adt.hl  fib.hl  functions.hl  gcd.hl  hello.hl  hof.hl  holes.hl  list.hl  peano.hl  simple.hl  sort.hl  test.hl  test_str.hl
src/: ast.rs  builtins.rs  hole.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs  typecheck.rs
