[package]
name = "hole"
version = "0.1.0"
edition = "2024"
description = "Hole — an experimental LLM-first programming language"

[[bin]]
name = "hole"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
colored = "3"
